tests/rawptr_cast_to_int_bad.stderr
tests/rawptr_cast_to_int_bad.hop:3:22: error: HOP2004: type mismatch: cannot cast rawptr to int
