tests/rawptr_cast_to_int_bad.hop
fn main() {
	var opaque rawptr = null
	var n      int    = opaque as int
	_ = n
}
